Changes with Apache 1.3.17

  *) Fix an unlikely segfault provided a zero length string in the
     translate_userdir() call on win32/os2, and accept backslashes
     in the UserDir directive on those platforms [William Rowe]

  *) Fixed translate_userdir() in MOD_USERDIR.C so that it correctly
     recognizes NetWare absolute paths.  This fixes the problem where
     MOD_USERDIR was trying to redirect to an absolute NetWare path
     rather than opening the file at the specified location.  This 
     patch fixes PR5826 & 6283. [Brad Nicholes <BNICHOLES@novell.com>]

  *) Fixed ap_os_is_path_absolute() in OS.H so that it can tell the
     between a NetWare path (SYS:/path) and a URL (HTTP://path).
     [Brad Nicholes <BNICHOLES@novell.com>]

  *) Fixed the sdbm.h bundled in Apache for Win32, bringing it in sync
     with Perl.  Because it didn't have the same geometry as Perl, 
     users reported the first user added with dbmmanage was not 
     recognized.  [William Rowe]

  *) Fixed ap_os_canonical_filename to append a the default volume 
     name if the the path is a full path and does not include the
     volume name.  Since NetWare's current working directory always 
     defaults to the SYS: volume regardless of where the executible 
     started, the default volume will be the volume that is specified 
     in ap_server_root.  [Brad Nicholes <BNICHOLES@novell.com>]

  *) Handle port numbers in Host headers properly again after
     the code was broken in 1.3.15. [Tony Finch]

Changes with Apache 1.3.16

  *) None from 1.3.15 [repository tags were the issue, no code altered]

Changes with Apache 1.3.15

  *) Fix a new problem introduced with the -k config syntax, that the
     service installed with the -i flag would attempt to re-install
     itself when starting the server.  [William Rowe, Andrew Braund]

  *) Fix the declaration of the module structure in mod_example.
     PR#7095 [Gururaj Upadhye <gururaj@enertec.com>]
