@@ -143,6 +143,7 @@ void init_name_space()
 char *ap_os_canonical_filename(pool *pPool, const char *szFile)
 {
     char *pNewName = ap_pstrdup(pPool, szFile);
+    char *slash_test;
 	
     bslash2slash(pNewName);
     if ((pNewName[0] == '/') && (strchr (pNewName, ':') == NULL))
@@ -151,6 +152,14 @@ char *ap_os_canonical_filename(pool *pPool, const char *szFile)
 
         _splitpath (ap_server_root, vol, NULL, NULL, NULL);
         pNewName = ap_pstrcat (pPool, vol, pNewName, NULL);
+    }
+    if ((slash_test = strchr(pNewName, ':')) && (*(slash_test+1) != '/'))
+    {
+        char vol[_MAX_VOLUME+1], dir[_MAX_DIR+1];
+        char fname[_MAX_FNAME+1], ext[_MAX_EXT+1];
+        
+        _splitpath (pNewName, vol, dir, fname, ext);
+        pNewName = ap_pstrcat (pPool, vol, "/", dir, fname, ext, NULL);
     }
     strlwr(pNewName);
     return pNewName;
